# Changelog 

--------------------------

## [v2026+1.0.4] - January 18, 2026

### Changed
- Project "Preminent Network" (Active) -> (Planning)
- Loading speed

### Updated
- About me

### Removed
- "Focus" box on homepage
- Steam and Modrinth as socials on homepage

--------------------------

## [v2026+1.0.3] - January 17, 2026

### Changed
- Discord link

### Removed
- review.wejkey.org

--------------------------

## [v2026+1.0.2] - January 11, 2026

### Fixed
- Changelog styling in some older versions (forgot "###")

### Changed
- "Check these" -> "Focus" and its projects
- Loading speed

### Updated
- About me
- Timeline

### Removed
- Preminent versioning

--------------------------

## [v2026+1.0.1] - January 1, 2026

### Changed
- Github link project changed to link to website of specific project

--------------------------

# END OF YEAR 2025

--------------------------

## [v2026+1.0.0] - December 31, 2025

Wejkey.org (wejkey.github.io/wejkeyy.github.io) exists since 2024. Thats 3 years
of development, new projects and learning. Thanks for checking this page or any project I developed. It means a lot.

I hope, 2026 will be as best as it can be for you.

--------------------------

## [v2026+1.0.0-beta.8] - December 30, 2025

### Changed
- Planning project name
- Temporary paused development for Database

--------------------------

## [v2026+1.0.0-beta.7] - December 27, 2025

### Added
- Planning projects > "Minecraft server"

--------------------------

## [v2026+1.0.0-beta.6] - December 26, 2025

### Fixed
- Grammar errors
- Minor details

### Changed
- Hero card (aka "Check these")

--------------------------

## [v2026+1.0.0-beta.5] - December 22, 2025

### Fixed
- Portfolio release date in projects

--------------------------

## [v2026+1.0.0-beta.4] - December 22, 2025

### Removed
- PaperMC Hangar
- Two primary buttons

--------------------------

## [v2026+1.0.0-beta.3] - December 20, 2025

### Fixed
- Grammar

### Changed
- Loading time