@@ -1,4 +1,1 @@
-<head>
-  <meta http-equiv="refresh" content="1; url=https://wejkey.org">
-  <script> setTimeout(() => { window.location.href = "https://wejkey.org/"; }, 1);</script>
-</head>
+<head><meta http-equiv="refresh" content="1; url=https://wejkey.org"><script> setTimeout(() => { window.location.href = "https://wejkey.org/"; }, 1);</script></head>
